minhaadega-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minhaadega-deployment-$BRANCH
  namespace: minhaadega
spec:
  selector:
    matchLabels:
      app: minhaadega-$BRANCH
  template:
    metadata:
      labels:
        app: minhaadega-$BRANCH
    spec:
      containers:

      - name: minhaadega-container-$BRANCH
        image: registry.softdesign-rs.com.br/minhaadega/api:$BRANCH
        imagePullPolicy: Always
        ports:
          - containerPort: 3001
      - name: minhaadega-mongo-$BRANCH
        image: mongo:4.2
        ports:
          - containerPort: 27017
        volumeMounts:
         - mountPath: /data/db
           name: minhaadega-volume

      volumes:
      - name: minhaadega-volume
        persistentVolumeClaim:
          claimName: minhaadega-pvc-$BRANCH
