minhaadega-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minhaadega-service-$BRANCH
  namespace: minhaadega
spec:
  selector:
    app: minhaadega-$BRANCH
  type: NodePort
  ports:
  - name: api
    port: 3001
  - name: db
    port: 27017
